[metadata]
name = lure-simulator
version = 1.0
author = Lure Developers
author_email = lure@example.com
license_files = LICENSE.md
description = A simulator for batteryless intermittent communication
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.example.com
project_urls =
    Bug Tracker = https://www.example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    simpy
    matplotlib
    scipy
    alive_progress
    sympy
    seaborn
    networkx
    scikit-learn
    statsmodels

[options.packages.find]
where = src

[options.package_data]
lure =
    config/default/*.json